user-charts/admin-presentation/templates/network/admin-nginx-presentation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-presentation
  labels:
    app: nginx-presentation
spec:
  type: ClusterIP
  selector:
    app: nginx-presentation
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
